# cron-guard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/app/: alerts.py  auth.py  checker.py  config.py  database.py  main.py  models.py
src/app/routers/: auth.py  badge.py  monitors.py  ping.py  settings.py
src/app/templates/: base.html  dashboard.html  settings.html
src/app/templates/auth/: login.html  register.html
src/app/templates/monitors/: detail.html  form.html
tests/: conftest.py  test_auth.py  test_badge.py  test_checker.py  test_health.py  test_monitors.py  test_ping.py  test_settings.py
